test/scc/decl/semantic-errors/014.t
struct
{
    int a;
    
    struct 
    {
        int a;
    };
};